--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -4,5 +4,6 @@ Things TODO for Eddie!
 
 - Remove dependence on bin/systype.  Determine system type internally.
 - Double checking for Port directive
+- TEST with 'import elvin' (Elvin4)
 
 
