--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -1,9 +1,25 @@
 Things TODO for Eddie!
 
-- PROC should check ALL named processes, not just first process it finds.
-
-- Remove dependence on bin/systype.  Determine system type internally.
 - Double checking for Port directive
 - TEST with 'import elvin' (Elvin4)
+
+- rule dependencies
+
+- escalation
+
+- logfile checking
+
+- ping checks
+
+- msg objects in action calls, eg:
+    PORT  'hostname': 50006   ""  "ALIVE" email('alert', commonmsg.port.WARN)
+
+- store disk usage in eddiedb
+
+
+BUGS:
+ - Solaris 8:
+     top: /dev/ksyms is not a 32-bit kernel namelist
+     kvm_open: Error 0
 
 
