Added support for directive templates.  A directive can be created to be only used as a template for other directives, supplying default settings; as well as standard directives can also be used as templates for other directives.
Directive template creation, eg:
    PROC 'template1':   template=self   scanperiod='5m' checks=2
checkwait=30
    PROC 'cron':        template='template1'    procname='crond'
action="..."
  special template=self means this directive is a template and not to
  schedule it.
  Can use other working directives as templates also.
  Template should be same directive type as directive using it - but this is
    not enforced because it shouldn't hurt.... directives ignore any arguments
    they don't need.

[cvs committed again after filesystem was lost.]

--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -5,23 +5,26 @@ y Add NUMTHREADS as a config variable
 y Change directive syntax to be "DIRECTIVE 'name': etc etc"
 y Add scanperiod argument to directives
 y Add ALIAS definition type for action argument aliases, etc
+y Double checking for directives: use arguments checks= and checkwait= eg:
+    crond': checks=2 checkwait=30 procname='crond' rule='NR' action="..."
+    means perform 2 checks total (only perform the second check if the
+    first one fails) and wait 30seconds between checks.
+    The directive is actually re-scheduled in the scheduler queue for 30seconds
+    time.
 
-- Double checking for directives: use arguments checks= and checkwait= eg:
-  crond': checks=2 checkwait=30 procname='crond' rule='NR' action="..."
-  means perform 2 checks total (only perform the second check if the
-  first one fails) and wait 30seconds between checks.
-  The directive is actually re-scheduled in the scheduler queue for 30seconds
-  time.
-
-- Directive template creation, eg:
+y Directive template creation, eg:
     PROC 'template1':	template=self	scanperiod='5m'	checks=2	checkwait=30
     PROC 'cron':	template='template1'	procname='crond'	action="..."
   special template=self means this directive is a template and not to
   schedule it.
   Can use other working directives as templates also.
-  Template must be same directive type as directive using it.
+  Template should be same directive type as directive using it - but this is
+    not enforced because it shouldn't hurt.... directives ignore any arguments
+    they don't need.
 
 - rule dependencies
+
++ See BUG re multi-line directives...
 
 - make os-dependent data collectors thread-safe, as Linux/proc.py
 
