Finally finished support for multiple extra arguments and multi-line directives in config file.  This makes configuration much more powerful and the layout can be much neater.

--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -64,6 +64,8 @@ y Directive template creation, eg:
 
 - PROC rule NR/R, change to variable, ie: rule="!exists"
 
+- back off on warnings - something like 10m, 30m, 1hr, 2hr, 4hr, etc.
+
 
 BUGS:
  - Unknown directives are not handled properly.
