--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -22,6 +22,7 @@ y Directive template creation, eg:
     they don't need.
 y Directives spanning multiple lines not parsed properly.
 y Problem age/ack details variable for messages, eg: %(probage)s, etc.
+y logfile checking
 
 - See DEF problems/changes in BUGS
 
@@ -37,8 +38,6 @@ y Problem age/ack details variable for messages, eg: %(probage)s, etc.
 - TEST with 'import elvin' (Elvin4)
 
 - escalation
-
-- logfile checking
 
 - ping checks
 
@@ -66,6 +65,9 @@ y Problem age/ack details variable for messages, eg: %(probage)s, etc.
 
 - back off on warnings - something like 10m, 30m, 1hr, 2hr, 4hr, etc.
 
+- allow MSG strings to be included from separate files, so instead of a string
+  in the MSG def, it would have file:procwarn.
+
 
 BUGS:
  - Unknown directives are not handled properly.
@@ -80,4 +82,5 @@ BUGS:
 
  - cannot have a commented line in the middle of a directive definition...
 
+ - needs a catch in SIGHUP to catch the interuppted system call - severity minor [RT]
 
