Added two new config settings:     EMAIL_FROM='emailaddress'     EMAIL_REPLYTO='emailaddress' so the From: and Reply-To: fields in the email action can be set. If these are not set, they default to the current USER for the From: field, and '' for the Reply-To: field.

--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -68,6 +68,11 @@ y logfile checking
 - allow MSG strings to be included from separate files, so instead of a string
   in the MSG def, it would have file:procwarn.
 
+- extra args for PROC: matchre='.*': match on regular expression
+    user="username": match on user
+    notuser="username": match not owned by user, and allow multiple entries
+    allow userid matches in rule.
+
 
 BUGS:
  - Unknown directives are not handled properly.
