--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -70,11 +70,13 @@ y logfile checking
 - allow MSG strings to be included from separate files, so instead of a string
   in the MSG def, it would have file:procwarn.
 
+- add excludehosts argument to directives, to provide a list of hostnames
+  to not execute this directive on.
+
 - extra args for PROC: matchre='.*': match on regular expression
     user="username": match on user
     notuser="username": match not owned by user, and allow multiple entries
     allow userid matches in rule.
-
 
 BUGS:
  - Unknown directives are not handled properly.
