--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -1,8 +1,8 @@
 This is Eddie.
 
 It is still very much in development but is working in its current
-form and has been working for 3 years (it is our primary monitoring
-and alerting tool at Connect).
+form and has been working for 4 years (it is the primary monitoring
+and alerting tool at the author's places of employment).
 
 Documentation is online at http://www.codefx.com.au/eddie/doc/
 
@@ -10,8 +10,10 @@ You need to create a config directory where config.sample is located
 and create an eddie.cf config file and rules files.  See config.sample
 for examples.
 
-See http://www.codefx.com.au/eddie/ for more information.
-Email chris@codefx.com.au for information/help/tips/comments/etc.
+See QUICKSTART if you are impatient.
 
-Chris. <chris@codefx.com.au>
+See http://www.codefx.com.au/eddie/ for more information.
+Email eddie@codefx.com.au for information/help/tips/comments/etc.
+
+Chris & Rod.
 
