--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -1,8 +1,9 @@
-This is Eddie.
+This is the EDDIE Tool.  It is a monitoring, security and performance
+analysis tool for most common flavours of UNIX.
 
-It is still very much in development but is working in its current
-form and has been working for 4 years (it is the primary monitoring
-and alerting tool at the author's places of employment).
+It is still very much in development but is very stable in its current
+form and has been used in production for over 4 years (it is the primary
+monitoring tool at the author's places of employment).
 
 Documentation is online at http://eddie-tool.net/doc/
 
